Fixed hint size on mobile devices

--- a/src/containers/skillProgress/Progress.scss
+++ b/src/containers/skillProgress/Progress.scss
@@ -274,8 +274,8 @@
 }
 
 .skills-hint {
-  font-size: 0.7rem;
-  line-height: 1;
+  font-size: 0.85rem;
+  line-height: 1.3;
   opacity: 0.95;
   margin-bottom: 2rem;
   font-weight: 500;
@@ -368,7 +368,7 @@
   }
 
   .skills-hint {
-    font-size: 2px;
+    font-size: 0.85rem;
     padding: 0.45rem 0.65rem;
   }
 }
@@ -606,7 +606,7 @@
   }
 
   .skills-hint {
-    font-size: 0.85rem;
+    font-size: 0.9rem;
     padding: 0.4rem 0.6rem;
   }
 }
